# doubledate

./: .gitignore  .readthedocs.yml  LICENCE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  python-package.yml  testing-and-linting.yml
docs/: conf.py  index.rst
docs/fragments/: badges.rst
docs/source/: API.rst  changelog.rst  installation.rst
docs/source/API/: calendar.rst  index.rst  utilities.rst
docs/source/Calendar/: doubledate.Calendar.apply.rst  doubledate.Calendar.asof.rst  doubledate.Calendar.create.rst  doubledate.Calendar.dates.rst  doubledate.Calendar.dayof.rst  doubledate.Calendar.daysbetween.rst  doubledate.Calendar.daysfrom.rst  doubledate.Calendar.daysto.rst  doubledate.Calendar.difference.rst  doubledate.Calendar.end.rst  doubledate.Calendar.eom.rst  doubledate.Calendar.eoq.rst  doubledate.Calendar.eos.rst  doubledate.Calendar.eot.rst  doubledate.Calendar.eoy.rst  doubledate.Calendar.fa.rst  doubledate.Calendar.filter.rst  doubledate.Calendar.first.rst  doubledate.Calendar.generate.rst  doubledate.Calendar.groupby.rst  doubledate.Calendar.index.rst  doubledate.Calendar.intersection.rst  doubledate.Calendar.inverse.rst  doubledate.Calendar.join.rst  doubledate.Calendar.last.rst  doubledate.Calendar.lb.rst  doubledate.Calendar.offset.rst  doubledate.Calendar.resample.rst  doubledate.Calendar.rst  doubledate.Calendar.snap.rst  doubledate.Calendar.som.rst  doubledate.Calendar.soq.rst  doubledate.Calendar.sos.rst  doubledate.Calendar.sot.rst  doubledate.Calendar.soy.rst  doubledate.Calendar.split.rst  doubledate.Calendar.start.rst  doubledate.Calendar.union.rst  doubledate.Calendar.weekdays.rst  doubledate.Calendar.weekends.rst
docs/source/Collection/: doubledate.Collection.apply.rst  doubledate.Collection.combine.rst  doubledate.Collection.filter.rst  doubledate.Collection.first.rst  (+4 more)
doubledate/: __init__.py  calendar.py  constants.py  diem.py  internals.py  utils.py
tests/: calendar.CSV  calendar.py  collection.py  conftest.py  diem.py  doubledate_tests.py  test_calendar.py  test_diem.py  test_utils.py  utils.py
(+67 files in other folders)
