[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doubledate"
description = "doubledate, yet another datetime library, exposes a set of 20+ utility functions as well as an immutable `Calendar` object representing a sorted-set of dates."
authors = [
    {name = "David Schenck", email = "david.schenck@outlook.com"}
]
keywords = [
    "datetime",
    "date",
    "time",
    "calendar"
]
readme = { file = "README.md", "content-type" = "text/markdown" }
urls = { "Homepage" = "https://doubledate.readthedocs.io/en/latest" }
dynamic = ["version"]
dependencies = [
    "python-dateutil",
    "sortedcontainers",
]
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]
